Update poetry website links and fix navigation URLs
- Replace placeholder poetry URLs with actual wtdaviespoetry.com domain
- Fix malformed URLs in photos.htm navigation
- Update all links to use HTTPS protocol

--- a/index.htm
+++ b/index.htm
@@ -142,10 +142,10 @@ h5 { color: #4FFFFF; }
                             <h1>POETRY</h1>
                 <div class="paragraphe">
                 <h2 align="center"><strong>Bill's  poetry website is now up!&nbsp; </strong></h2>
-<p align="center"><strong><a href="https://YOUR_USERNAME.github.io/wtdaviespoetry/">Click to read poems</a> </strong></p>
+<p align="center"><strong><a href="https://wtdaviespoetry.com/">Click to read poems</a> </strong></p>
 <p align="center">&nbsp;</p>
 <center>
-<a href="https://YOUR_USERNAME.github.io/wtdaviespoetry/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image1','','images/016small.jpg',1)"><img src="images/016small.jpg" alt="click to visit wtdaviespoetry.com website" width="181" height="256" border="0" id="Image2" /></a>
+<a href="https://wtdaviespoetry.com/" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('Image1','','images/016small.jpg',1)"><img src="images/016small.jpg" alt="click to visit wtdaviespoetry.com website" width="181" height="256" border="0" id="Image2" /></a>
 </p>
 
 </center>
@@ -224,7 +224,7 @@ Your brief appearance in this<br />
             <div class="menu_v_ctn">
 	            <p><span class="menu_v_titre">Links</span>
                 <a href="photos.htm">Photography</a><br />
-               <a href="https://YOUR_USERNAME.github.io/wtdaviespoetry/">Poetry</a></p>
+               <a href="https://wtdaviespoetry.com/">Poetry</a></p>
         </div>
         </div>
         <div class="clean"></div>
