--- a/photos.htm
+++ b/photos.htm
@@ -72,7 +72,7 @@ document.oncontextmenu=new Function("alert(message);return false")
 <DIV id="container">
 <DIV id="header">
 <H1>Header Info</H1>
-<P align="justify">Photography, Poetry and Music by Bill Davies    &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  <A href="http://http://www.mountainfireband.com/photos.htm">photos</A>&nbsp;&nbsp;<A href="http://www.wtdaviespoetry.com/index.htm">poetry</A>&nbsp;&nbsp;<A href="http://www.mountainfireband.com/clips.htm">music</A>    </P>
+<P align="justify">Photography, Poetry and Music by Bill Davies    &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  <A href="https://www.mountainfireband.com/photos.htm">photos</A>&nbsp;&nbsp;<A href="https://wtdaviespoetry.com/">poetry</A>&nbsp;&nbsp;<A href="https://www.mountainfireband.com/clips.htm">music</A>    </P>
 </DIV>
 <!-- end header--><!--end sidebar-->
     
